# LearnGCGE

./: CMakeLists.txt  README.md
example/: usrParam.txt
gcge/app/: app_slepc.c
gcge/include/: app_slepc.h  ops.h  ops_eig_sol_gcg.h
gcge/src/: ops_eig_sol_gcg.c  ops_lin_sol.c  ops_multi_vec.c
src/: main.cpp
src/io/: io_eigen_result.cpp  io_eigen_result.h  mmloader.c
test/: CMakeLists.txt  test_example.cpp  test_slepc.cpp
